--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
+  <header>{@include 'header.html'}</header>
   <section>
     Welcome to Adoria298's official website! On here you'll find code for episodes, personal projects and latest videos!
   </section>
+  <footer>{@include 'footer.html'}</header>
 </body>
