Added {{ content }} tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
-  <header>{@include 'header.html'}</header>
-  <section>
-    Welcome to Adoria298's official website! On here you'll find code for episodes, personal projects and latest videos!
-  </section>
-  <footer>{@include 'footer.html'}</header>
+  <div class="wrapper">
+    <section>
+      {{ content: "Welcome to Adoria298's Official Website! On here you'll find code for my videos, personal projects, and links to the lates videos!" }}
+    </section>
+  </div>
 </body>
