--- a/index.html
+++ b/index.html
@@ -3,9 +3,5 @@ layout: default
 title: Adoria298 Official Website
 ---
 <body>
-  <div class="wrapper">
-    <section>
-      {{ content: "Welcome to Adoria298's Official Website! On here you'll find code for my videos, personal projects, and links to the lates videos!" }}
-    </section>
-  </div>
+  Welcome to Adoria298's official website! On here you'll find code for videos, personal projects, and the latest news and videos.
 </body>
