Added latest video area

--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@ layout: default
 title: Adoria298 Official Website
 ---
 <body>
-  Welcome to Adoria298's official website! On here you'll find code for videos, personal projects, and the latest news and videos.
+  <p>Welcome to Adoria298's official website! On here you'll find code for videos, personal projects, and the latest news and videos.<p>
+  <hr />
+  
+  <p><b>Latest Video:</b>
+  <iframe width="480" height="270" src="https://www.youtube.com/embed/eVX1H1rDnwI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+  </p>
+  <hr />  
 </body>
