Tried to fix rendering issues

--- a/video_code/minecraft_advancements/index.html
+++ b/video_code/minecraft_advancements/index.html
@@ -1,9 +1,8 @@
 ---
 layout: video_code
-title: LearnToCode: Minecraft Advancements
+title: LearnToCode Minecraft Advancements
 ---
-<body>
-  
+<body>  
  <a href="https://www.youtube.com/playlist?list=PL8-uIwNV_QeyWd7tIQATnYfwM4_oWoaU6">Learn To Code: Minecraft Advancements</a> Code
 
   <h3>Instructions for Use:</h3>
@@ -17,6 +16,5 @@ title: LearnToCode: Minecraft Advancements
   <ul>
     <li> Type out the file as you listen to the video, it helps you learn. </li>
     <li>  Only use this as a last resort, try and type the code out separately in the video. </li>
-  </ul>
-  
+  </ul>  
 </body>
