Added <h2> tags around the title

--- a/video_code/minecraft_advancements/index.html
+++ b/video_code/minecraft_advancements/index.html
@@ -3,7 +3,7 @@ layout: video_code
 title: LearnToCode Minecraft Advancements
 ---
 <body>  
- <a href="https://www.youtube.com/playlist?list=PL8-uIwNV_QeyWd7tIQATnYfwM4_oWoaU6">Learn To Code: Minecraft Advancements</a> Code
+ <h2><a href="https://www.youtube.com/playlist?list=PL8-uIwNV_QeyWd7tIQATnYfwM4_oWoaU6">Learn To Code: Minecraft Advancements</a> Code</h2>
 
   <h3>Instructions for Use:</h3>
   <ul>
