Replaced md links with <a> tags

--- a/video_code/minecraft_advancements/index.html
+++ b/video_code/minecraft_advancements/index.html
@@ -8,8 +8,8 @@ title: LearnToCode Minecraft Advancements
   <h3>Instructions for Use:</h3>
   <ul>
     <li> Download or type out each file, and save it as per the instructions below. </li>
-    <li> Save .json files following the instructions in episodes [0](https://youtu.be/9T_xYQRTUAM) and [1](https://youtu.be/QBGzC0tZYK4). </li>
-    <li> Save .mcfunction files following the instructions in episode [3](https://youtu.be/qfu1_j4REk0). </li>
+    <li> Save .json files following the instructions in episodes <a href="https://youtu.be/9T_xYQRTUAM">0</a> and <a href="https://youtu.be/QBGzC0tZYK4">1</a>. </li>
+    <li> Save .mcfunction files following the instructions in episode <a href="https://youtu.be/qfu1_j4REk0">3</a>. </li>
   </ul>
 
   <h3>Recommendations</h3>
