Stage 3 of issue #2

--- a/video_code/index.html
+++ b/video_code/index.html
@@ -9,7 +9,7 @@ title: Code for Adoria298's videos
   <p>On here you'll find links to code for all Adoria298's coding tutorial</p>
   <p>
   <ul>
-    <li><a href="minecraft_advancements/index.html">LearnToCode:Minecraft Advancements</a></li>
+    <li><a href="https://adoria298.github.io/video_code/minecraft_advancements/index.html">LearnToCode:Minecraft Advancements</a></li>
   </ul>
   </p>
 </body>
