--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@ title: Adoria298 Official Website
   <hr />
   
   <p><b>Latest Video:</b>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/xndSaRmu7VU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+  <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>   
   </p>
-  <hr />  
+  <hr /> 
+  <script>
+//code to automatically update the latest video
+var channelID = "UCZxZ8oZnKXGG_O9ZqBFEXSQ";
+$.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
+   var link = data.items[0].link;
+   var id = link.substr(link.indexOf("=")+1);
+    $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
+});
+  </script>
 </body>
