--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Adoria298 Official Website
   <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>   
   </p>
   <hr /> 
-  <script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
 //code to automatically update the latest video
 var channelID = "UCZxZ8oZnKXGG_O9ZqBFEXSQ";
 $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
